# Messerschaerfer-Schleifwinkelsteuerung

./: CMakeLists.txt  Erklärung.md  README.md  Testdokumentation.md
Test/: Test_Sprint1.md  Test_Sprint2.md  Test_Sprint3.md
docs/: Gesamtdokumentation.md  Requirement_Engineering.md  Requirements.md  Traceability_Matrix.md
docs/Sprint 1/: Architektur_1.md  Design_1.md  Implementierung_1.md  Sprint_1.md  Test_1.md
docs/Sprint 2/: Architektur_2.md  Design_2.md  Implementierung_2.md  Sprint_2.md
docs/Sprint 3/: Architektur_3.md  Design_3.md  Implementierung_3.md  Sprint_3.md
docs/referenziert/Architektur/: Architektur.md
docs/referenziert/Architektur/Design/: Design.md
docs/referenziert/Design/: Design.md
docs/referenziert/Requirement_Engineering/: Lastenheft.md  Pflichtenheft.md  Requirements.md
src/: Values.cpp  Values.h  main.cpp
src/HardwareAbstraction/: MotorController.cpp  MotorController.h  Sensor.cpp  Sensor.h
src/PersistenceManager/: ConfigManager.cpp  ConfigManager.h  PersistenceService.cpp  PersistenceService.h
src/UI/: UI_Display.cpp  UI_Display.h  UI_Input.cpp  UI_Input.h
src/Winkellogik/: AngleControl.cpp  AngleControl.h  AngleCorrection.cpp  AngleCorrection.h  CalibrationManager.cpp  CalibrationManager.h  MotorProxy.cpp  MotorProxy.h
